--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -498,7 +498,6 @@ section {
 .skills .progress .skill {
   padding: 10px 0;
   margin: 0;
-  text-transform: uppercase;
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
@@ -508,6 +507,11 @@ section {
 .skills .progress .skill .val {
   float: right;
   font-style: normal;
+}
+.skills .progress .skill .val-skill {
+  float: right;
+  font-style: normal;
+  color: #66a537;
 }
 
 .skills .progress-bar-wrap {
@@ -809,7 +813,7 @@ section {
 --------------------------------------------------------------*/
 .services .icon-box {
   text-align: center;
-  padding: 70px 20px 80px 20px;
+  padding: 70px 20px 20px 20px;
   transition: all ease-in-out 0.3s;
   background: #fff;
   box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
