--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -748,6 +748,7 @@ section {
 --------------------------------------------------------------*/
 .portfolio-details {
   padding-top: 40px;
+  padding-right: 80px;
 }
 
 .portfolio-details .portfolio-details-slider img {
